--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h3>프로젝트</h3>
   <ul>
     <li><a href="/outputs/GREAT.pptx">프로젝트 산출물</a></li>
-    <li><a href="https://github.com/sungbin94/notice.git">구현소스</a></li>
+    <li><a href="https://github.com/sungbin94/teamproject.git">구현소스</a></li>
     <li><a href="https://www.youtube.com/watch?v=Wr_lRMXyhtE">동영상</a></li>
   </ul>
 
